--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 POSTGRES_USER=coderjourney
 POSTGRES_PASSWORD=abcd1234
+TWITTER_KEY=HW1TGim69CYQwIWu4z0zIWwaL
+TWITTER_SECRET=fVMS2JdfDkCysFNcmi9pR6UGmHHmhlJfekCsGRTPTC3GudPr6E
